fix row gap on small screens

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ nav {
 
 .gallery-item {
     transition: all 0.3s;
+    margin-bottom: 1rem;
 }
 
 .gallery-item:hover {
